Bug 402888 - ghns_exclude tagged items are not actually excluded
Summary: ghns_exclude tagged items are not actually excluded
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.53.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-05 11:55 UTC by Nate Graham
Modified: 2019-01-12 16:50 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The wallpaper shows up anyway (211.24 KB, image/png)
2019-01-05 11:55 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2019-01-05 11:55:52 UTC
Created attachment 117295 [details]
The wallpaper shows up anyway

This item is marked as ghns_exclude: https://store.kde.org/p/1082769

But it shows up anyway. See attachment. Happens when using KDE Frameworks 5.53, 5.54, or git master.
Comment 1 Dan Leinir Turthra Jensen 2019-01-07 09:53:12 UTC
Could you check and make sure this is still marked as ghns-excluded for you? Just looked here, and it seems not to be excluded for me...
Comment 2 Dan Leinir Turthra Jensen 2019-01-07 10:11:09 UTC
As a test (because the item is already excluded by other means) i just tried to mark https://share.krita.org/p/1207357/ as excluded, and was informed by the site that it was successfully excluded. I just went back to check again, and it looks like that was not entirely true. Looks like we've probably got a bit of a server issue here...
Comment 3 Dan Leinir Turthra Jensen 2019-01-07 11:48:05 UTC
So, the plot thickens. We are now at a point where i can confirm that there is indeed a problem and that items are not being excluded, even when the ocs data says it should be. Taking and poking, shall report when i work out what's going on.
Comment 4 Dan Leinir Turthra Jensen 2019-01-07 12:18:20 UTC
Right, found the problem. The OCS server is exporting the exclusion tag as "ghns_excluded" rather than the expected "ghns_exclude", and so it is entirely ignored. The server team is aware of this, and i'll close this as fixed once it has, in fact, been fixed :)
Comment 5 Dan Leinir Turthra Jensen 2019-01-07 13:05:02 UTC
So, turns out that this is a deeper issue after all. Simply put, the problem is that there are semantic issues, which given this is meta data becomes very important to get fixed. So, what will happen next is that i whip up a patch to fix the client's expectations. The result will be that older versions of Frameworks will not have items excluded, but future metadata will be more consistent (in short, the metadata should not be action verbs - for a specific example, (ghns_)excluded rather than (ghns_)exclude).
Comment 6 Dan Leinir Turthra Jensen 2019-01-07 13:31:03 UTC
Related review: https://phabricator.kde.org/D18038
Comment 7 Dan Leinir Turthra Jensen 2019-01-12 16:50:17 UTC
This was fixed in https://phabricator.kde.org/R304:301fe73569ba9dbd1f80398fd616d8755accda15

Fix semantics for ghns_exclude

After much discussion on the topic, it came to light that the
specific grammar used for the default tag in KNSCore was
incorrect, as it was an action verb (rather than an adjective
the way the metadata tags are supposed to be). While this does
mean that previous versions of Frameworks will not have the
filtering functionality by default, it is otherwise
non-invasive and causes no side effects apart from the
server-suggested filtering working.

BUG: 402888
Differential Revision: https://phabricator.kde.org/D18038